# myOpenGLSamples

./: CMakeLists.txt  issues.md  notes.md
samples/: CMakeLists.txt
samples/01-create-window/: CMakeLists.txt  main.cpp
samples/01-create-window-freeglut/: README.md  main.cpp
samples/01-hello-window-glfw/: hello_window_clear.cpp
samples/02-hello-dot-fix-pipeline/: CMakeLists.txt  tutorial02.cpp
samples/03-hello-triangle-fix-pipeline/: CMakeLists.txt  tutorial03.cpp
samples/04-hello-triangle/: CMakeLists.txt  README.md  tutorial04.cpp
samples/05-uniform-variables/: CMakeLists.txt  tutorial05.cpp
samples/06-translation-transformation/: CMakeLists.txt  README.md  tutorial06.cpp
samples/07-rotation-transformation/: CMakeLists.txt  tutorial07.cpp
samples/08-scale-transformation/: shader.vs  tutorial08.cpp
samples/09-interpolation/: tutorial09.cpp
samples/10-indexed-draws/: tutorial10.cpp
samples/11-combining-transformations/: tutorial11.cpp
samples/12-perspective-projection/: tutorial12.cpp
samples/13-camera-space/: CMakeLists.txt  tutorial13.cpp
samples/14-camera-key-control/: tutorial14.cpp
samples/15-camera-mouse-control/: tutorial15.cpp
samples/advanced/: CMakeLists.txt
samples/advanced-opengl/: CMakeLists.txt
samples/advanced-opengl/00-load-model/: model_loading.cpp
samples/advanced-opengl/01-depth-view/: 1.1.depth_view.fs  depth_testing.cpp
samples/advanced-opengl/02-stencil-test/: stencil_testing.cpp
samples/advanced-opengl/03-alpha-test/: 3.1.blending.fs  discard.cpp
samples/advanced-opengl/04-blending/: blending_sorted.cpp
samples/advanced-opengl/05-fbo/: framebuffers.cpp
samples/advanced-opengl/06-skybox/: cubemaps_environment_mapping.cpp
samples/advanced/extensions/: CMakeLists.txt
samples/advanced/extensions/02-framebuffer-fetch/: CMakeLists.txt
samples/advanced/lighting/: CMakeLists.txt
samples/advanced/lighting/01-ambient-lighting/: CMakeLists.txt  lighting_technique.cpp  lighting_technique.h  tutorial17.cpp
samples/advanced/lighting/02-diffuse-lighting/: lighting_technique.h
samples/advanced/lighting/03-specular-lighting/: tutorial19.cpp
samples/advanced/lighting/04-point-light/: lighting.fs
samples/advanced/lighting/05-spot-light/: tutorial21.cpp
samples/advanced/shadows/01-shadow-mapping-draw-depth/: CMakeLists.txt  display_screen.fs  display_screen_technique.cpp  display_screen_technique.h  draw_texture.vs  mesh.cpp  mesh.h  quad_mesh.cpp  quad_mesh.h  shadow_map.fs  shadow_map.vs  shadow_map_fbo.h  shadow_map_technique.cpp  shadow_map_technique.h  tutorial23.cpp
samples/advanced/shadows/02-shadow-mapping-draw-scene/: tutorial24.cpp  (+1 more)
samples/basic/: CMakeLists.txt
samples/basic-opengl/: CMakeLists.txt
samples/basic-opengl/01-hello-window/: 01.cpp
samples/basic-opengl/03-index-draw/: 03.cpp
samples/basic-opengl/05-vertex-attributes/: CMakeLists.txt  shaders_interpolation.cpp
samples/basic-opengl/06-texture/: CMakeLists.txt
samples/basic-opengl/07-model-matrix/: CMakeLists.txt  transformations.cpp
samples/basic-opengl/08-mvp-matrix/: CMakeLists.txt  coordinate_systems_depth.cpp
samples/basic-opengl/08-projection-matrix/: CMakeLists.txt
samples/basic/01-hello-window/: CMakeLists.txt
samples/basic/02-hello-dot-fix-pipeline/: README.md  tutorial02.cpp
samples/basic/02-hello-triangle/: 02.cpp  CMakeLists.txt
samples/basic/03-index-draw/: CMakeLists.txt
samples/basic/04-hello-triangle/: tutorial04.cpp
samples/basic/04-shader-uniform/: shaders_uniform.cpp
samples/basic/05-uniform-variables/: tutorial05.cpp
samples/basic/05-vertex-attributes/: CMakeLists.txt  shaders_interpolation.cpp
samples/basic/06-texture/: CMakeLists.txt  textures.cpp
samples/basic/07-model-matrix/: CMakeLists.txt  transformations.cpp
samples/basic/08-mvp-matrix/: CMakeLists.txt  coordinate_systems_depth.cpp
samples/basic/08-scale-transformation/: tutorial08.cpp
samples/basic/09-camera-matrix/: CMakeLists.txt  camera_class.cpp
samples/basic/09-interpolation/: tutorial09.cpp
samples/basic/10-indexed-draws/: tutorial10.cpp
samples/basic/13-camera-space/: README.md  tutorial13.cpp
samples/basic/14-camera-key-control/: tutorial14.cpp
samples/basic/15-camera-mouse-control/: tutorial15.cpp
samples/basic/16-texture/: README.md  tutorial16.cpp
samples/basic/17-assimp-loading-model/: CMakeLists.txt  tutorial22.cpp
samples/getting_started/: CMakeLists.txt
samples/getting_started/01-hello-window/: 01.cpp
samples/getting_started/02-hello-triangle/: 02.cpp
samples/lighting/: CMakeLists.txt
samples/lighting/01-ambient/: CMakeLists.txt  colors.cpp
samples/lighting/01-ambient-lighting/: lighting_technique.cpp  lighting_technique.h  tutorial17.cpp
samples/lighting/02-diffuse/: CMakeLists.txt  basic_lighting_diffuse.cpp
samples/lighting/02-diffuse-lighting/: lighting_technique.cpp  tutorial18.cpp
samples/lighting/03-specular-lighting/: CMakeLists.txt  lighting_technique.cpp  lighting_technique.h
samples/lighting/03-speculer/: 2.2.lighting.vs  CMakeLists.txt  basic_lighting_specular.cpp
samples/lighting/04-directional-light/: 5.1.lighting.fs  CMakeLists.txt  light_casters_directional.cpp
samples/lighting/04-point-light/: tutorial20.cpp
samples/lighting/04-point-light TODO/: lighting_technique.cpp  lighting_technique.h  tutorial20.cpp
samples/lighting/05-point-light/: 5.2.light_cube.fs  5.2.lighting.fs  CMakeLists.txt  light_casters_point.cpp
samples/lighting/05-spot-light/: lighting_technique.cpp  lighting_technique.h
samples/lighting/06-spot-light/: 5.4.lighting.fs  light_casters_spot_soft.cpp
samples/post-processing/: CMakeLists.txt
samples/shadows/: CMakeLists.txt
samples/shadows/01-shadow-mapping-draw-depth/: CMakeLists.txt  draw_texture_technique.cpp  draw_texture_technique.h  shadow_map.fs  shadow_map_technique.cpp  tutorial23.cpp
samples/shadows/02-shadow-mapping-draw-scene/: CMakeLists.txt  ground_mesh.cpp  ground_mesh.h  lighting_technique.cpp  lighting_technique.h  mesh.h  shadow_map.fs  shadow_map_technique.cpp  shadow_map_technique.h  tutorial24.cpp
(+120 files in other folders)
